Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-60

message information is lost from stomp message to jms

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 1.1
    • 2.0
    • Stomp
    • None

    Description

      As my producer is a cpp server program i downloaded and compiled activemq-cpp 1.0. I managed to make activemq-cpp compile and link as shared lib / dll under vc 7.1 (Visual Studio .NET 2003). My consumer is located on a bea wls 8.1 I use the jms to jms bridge to forward the messages. For other reasons (see AMQ-1141) the forward fails. I can see in the dumped message:

      message: ActiveMQTextMessage {commandId = 3, responseRequired = false,
      messageId = ID:KStanke-2844-1170064566619-5:0:-1:1:1,
      originalDestination = null,
      originalTransactionId = null,
      producerId = ID:KStanke-2844-1170064566619-5:0:-1:1,
      destination = queue://TEST.FOO,
      transactionId = null, expiration = 0,
      timestamp = 1170064774288,
      arrival = 0,
      correlationId = null,
      replyTo = null,
      persistent = false,
      type = null,
      priority = 4,
      groupID = null,
      groupSequence = 0, targetConsumerId = null, compressed = false,
      userID = null, content = org.apache.activemq.util.ByteSequence@12f9924,
      marshalledProperties = org.apache.activemq.util.ByteSequence@1ef3212, dataStructure = null,
      redeliveryCounter = 0, size = 0, properties =

      {request-id=2}

      , readOnlyProperties = true,
      readOnlyBody = true, droppable = false, text = null}

      i'm missing the persistence as i used pProducer->setDeliveryMode( DeliveryMode::PERSISTANT ); As my message is a text message i'm missing the message text as well. I created the message with: pMessage = pSession->createTextMessage(messageText); with an nonempty string.

      Attachments

        Issue Links

          Activity

            People

              nmittler Nathan Christopher Mittler
              kay.stanke Kay Stanke
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: