[AMQCPP-60] Removing inclusion of request-id from stomp messages

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk/activemq-cpp@502061 13f79535-47bb-0310-9956-ffa450edef68