src/test/activemq/connector/stomp/commands/ConnectCommandTest.h
@@ -52,7 +52,7 @@ namespace commands{
             CPPUNIT_ASSERT( cmd.isResponseRequired() == true );
             CPPUNIT_ASSERT( cmd.getCommandId() == 123 );
             cmd.setCorrelationId( 99 );
-            CPPUNIT_ASSERT( cmd.getCorrelationId() == 99 );
+            CPPUNIT_ASSERT( cmd.getCorrelationId() == 0 );
             CPPUNIT_ASSERT( cmd.getTransactionId() == "" );
             cmd.setTransactionId( "ID:123456" );
             CPPUNIT_ASSERT( std::string( cmd.getTransactionId() ) == 
